Added new logos and styling to skills page

--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -65,6 +65,23 @@
     margin-right: 20px;
 }
 
+#angular_Logo{
+    height: 50px;
+    width: 50px;
+    margin-left: 5px;
+    margin-right: 20px;
+}
+
+#AWS_Logo {
+    height: 60px;
+    width: 60px;
+    margin-top: -5px;
+}
+
+#flask_Logo {
+    transition: ease-in-out 0.3s;
+}
+
 #java_Logo{
     height: 40px;
     width: 40px;
@@ -197,6 +214,32 @@
         height: 7vw;
         margin-top: 3px;
     }
+
+    #angular_Logo{
+        height: 9vw;
+        width: 9vw;
+    }
+    
+    #AWS_Logo {
+        height: 10vw;
+        width: 10vw;
+    }
+
+    #express_Logo{
+        display: none;
+    }
+
+    #bootstrap_Logo {
+        display: none;
+    }
+    
+    #docker_Logo {
+        height: 9vw;
+        width: 9vw;
+        margin-top: -5px;
+        margin-left: 15px;
+    }
+      
 
     #react_Logo{
         height: 7vw;
