--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -232,6 +232,10 @@
     #bootstrap_Logo {
         display: none;
     }
+
+    #tailwindcss_Logo {
+        display: none;
+    }
     
     #docker_Logo {
         height: 9vw;
@@ -251,7 +255,7 @@
     }
 }
 
-@media(max-height: 850px) and (max-width: 500px) {
+@media(max-height: 799px) and (max-width: 500px) {
     #skillsTitleContainer{
         font-size: 6vw;
         margin-top: 100px;
