Changed super small styling to make react and bootstrap logos non visible

--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -296,8 +296,15 @@
     }
 
     #react_Logo{
-        height: 7vw;
-        width: 7vw;
+        display: none;
+    }
+
+    #bootstrap_Logo {
+        display: none;
+    }
+
+    #tailwindcss_Logo {
+        display: none;
     }
 
     #skillsContent{
