--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -175,7 +175,7 @@
     }
 }
 
-@media(max-width: 500px) and (min-height: 800px) {
+@media(max-width: 500px) and (min-height: 500px) {
     #skillsTitleContainer{
         font-size: 6vw;
         margin-top: 110px;
@@ -255,7 +255,7 @@
     }
 }
 
-@media(max-height: 799px) and (max-width: 500px) {
+/* @media(max-height: 799px) and (max-width: 500px) {
     #skillsTitleContainer{
         font-size: 6vw;
         margin-top: 100px;
@@ -313,7 +313,7 @@
     #skillsText{
         margin-top: -55px;
       }
-    }
+    } */
 
 @media(min-height: 870px) and (min-width: 500px) {
     #skillsContainer{
