--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -162,10 +162,11 @@
 }
 
 #ufit_logo {
-    width: 85px;
-    height: 50px;
+    width: 180px;
+    height: 100px;
     margin-top: 1px;
-    border-radius: 3px;
+    background-color: rgba(255, 255, 255, 0);
+    /* border-radius: 3px; */
 }
 
 #disney_logo {
