--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -151,7 +151,7 @@
 
 #paragraph1{
     display: block;
-    pointer-events: none;
+    /* pointer-events: none; */
     opacity: 0%;
     color: #2b2c34;
     font-weight: bold;
