--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -282,7 +282,7 @@
 
   #paragraph1Mob{
     display: none;
-    pointer-events: none;
+    /* pointer-events: none; */
     opacity: 0%;
     color: #2b2c34;
     font-weight: bold;
